# yamabiko-asr

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: requirements.md
examples/: audio_file.rs  audio_input.rs  microphone.rs  microphone_and_system_audio.rs  system_audio.rs  wav_stream.rs
examples/common/: audio.rs  capture.rs  mod.rs  resampler.rs  wav.rs
src/: audio_features.rs  backend.rs  builder.rs  config.rs  diarization.rs  error.rs  event.rs  lib.rs  ort_utils.rs  session.rs  sortformer.rs  tdt.rs  vad.rs
tests/: audio_resampler.rs  diarization_api.rs  wav_reader.rs
tools/: export_parakeet_tdt_ja.py  export_parakeet_tdt_multilingual.py  export_sortformer_diarization.py  parakeet_export.py  test_export_sortformer_diarization.py  test_parakeet_export.py
