[package]
name = "yamabiko-asr"
version = "0.1.0"
edition = "2024"
description = "On-device Parakeet-family speech transcription for desktop Rust apps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayakashi-labs/yamabiko-asr"
readme = "README.md"
keywords = ["asr", "speech", "parakeet", "transcription", "tauri"]
categories = ["multimedia::audio"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE-*",
    "/examples/**",
    "/src/**",
    "/tools/**",
]

[features]
default = []
coreml = ["ort/coreml", "silero/coreml"]
cuda = ["ort/cuda", "silero/cuda"]
directml = ["ort/directml", "silero/directml"]
onednn = ["ort/onednn"]
openvino = ["ort/openvino", "silero/openvino"]
rocm = ["ort/rocm", "silero/rocm"]
tensorrt = ["ort/tensorrt", "silero/tensorrt"]
xnnpack = ["ort/xnnpack"]
serde = ["dep:serde"]

[dependencies]
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24"] }
realfft = "3.5.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
silero = { version = "0.4.0", default-features = false, features = ["bundled"] }
tokio = { version = "1.52.3", features = ["rt", "macros", "sync"] }

[dev-dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cpal = "0.18.1"
ctrlc = "3.5.2"
hound = "3.5.1"
rubato = "3.0.0"
