[package]
name = "yamabiko-asr"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
description = "On-device Parakeet-family speech transcription for desktop Rust apps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayakashi-labs/yamabiko-asr"
readme = "README.md"
keywords = ["asr", "speech", "parakeet", "transcription", "tauri"]
categories = ["multimedia::audio"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-*",
    "/examples/**",
    "/src/**",
    "/tests/**",
    "/tools/**",
]

[features]
default = []
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
directml = ["ort/directml"]
onednn = ["ort/onednn"]
openvino = ["ort/openvino"]
rocm = ["ort/rocm"]
tensorrt = ["ort/tensorrt"]
xnnpack = ["ort/xnnpack"]
serde = ["dep:serde"]

[dependencies]
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24"] }
realfft = "3.5.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
# silero 0.4 enables ort's defaults internally; remove those transitive
# features when an upstream release exposes a default-features-free ort edge.
silero = { version = "0.4.0", default-features = false, features = ["bundled"] }
tokio = { version = "1.52.3", features = ["rt", "sync"] }

[dev-dependencies]
hound = "3.5.1"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
cpal = "0.18.1"
ctrlc = "3.5.2"
rubato = "3"
